src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignForm/PromoCampaignSteps/StepInfo/StepInfo.module.css
.container {
    background-color: #f8f8f8;
    padding: 25px;
    height: 100%;
}

.container :global(label.ant-form-item-required) {
    align-items: flex-start;
}

.formItem {
    width: 80%;
}

.formItem :global(.ant-picker-range) {
    width: 100%;
}

.promoCampaignName,
.selectCategories {
    max-width: 600px;
}

.tagSelect {
    padding: 1px 10px;
    background-color: rgba(9, 165, 82, 0.08);
    color:#09a552;
    border-radius: 25px;
    margin-right: 3px;
    display: flex;
    align-items: center;
}

.select {
    background-color: #fff;
    border: 1px solid #d9d9d9;
    display: flex;
}

.select:active, .select:focus, .select:hover {
    border-color: #09a552;
}

.select:global(.ant-select-focused) {
    border-color: #09a552;
}

.select :global(.ant-select-selector) {
    flex-wrap: nowrap;
    overflow: hidden;
    background-color: transparent;
    border: none;
    width: 100%;
}

.select :global(.ant-select-arrow) {
    position: static;
    margin-top: 0;
    width: auto;
    height: auto;
}

.suffixBlock {
    display: flex;
    height: 100%;
    align-items: center;
    flex-direction: row-reverse;
}

.selectCount {
    padding: 3px 12px;
    background-color: rgba(9, 165, 82, 0.08);
    color:#09a552;
    border-radius: 25px;
    margin-left: 10px;
    display: flex;
    align-items: center;
}

.dropdown {
    background-color: transparent !important;
}

.dropdown :global(.ant-select-item-option-state) {
    display: none;
}

.selectText {
    max-width: 250px;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

.icon {
    margin: 0 5px;
}

.icon :global(svg) {
    height: 13px;
    width: 13px;
}

.statusInfo {
    width: 100%;
    max-width: 280px;
}

.viewInfo {
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: rgba(0, 0, 0, 0.65);
}

.viewInfo :global(.ant-form-item) {
    margin-bottom: 0;
}

.statusText {
    max-width: 180px;
    margin-right: 5px;
}

.infoDetail {
    margin-top: 15px;
    padding-bottom: 15px;
}

.checkbox:not(:last-child) {
    display: block;
    margin-bottom: 10px;
}

.mrr {
    margin-right: 10px;
}

.urlSource {
    display: flex;
    justify-content: space-between;
    width: 80%;
    max-width: 250px;
}

.switchRow {
    display: flex;
    align-items: flex-end;
}

.switchRow .statusInfo {
    margin-bottom: 24px;
}

.switchRow .viewInfo {
    color: rgba(0, 0, 0, 0.85);
}

